// Copyright 2019 The Meerkat Authors
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package meerkat.schema;
option go_package = "schema";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

message Index {
  string id                         = 1 ;
  string name                       = 2 ;
  string desc                       = 3 ;
  google.protobuf.Timestamp created = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp updated = 5 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

message PartitionAlloc{
  uint32 NumOfPartitions              = 1 ;
  map<string, PartitionList> AllocMap = 2 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp created   = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp updated   = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

message PartitionList{
    repeated uint32 partitions        = 1 ;
}


message Field{
    string id            = 1 ;
    string name          = 2 ;
    string desc          = 3 ;
    string index_id      = 4 [(gogoproto.jsontag) = "-"];
    FieldType field_type = 5 ;
    bool Nullable        = 6 ;
    google.protobuf.Timestamp created = 7 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
    google.protobuf.Timestamp updated = 8 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

enum FieldType{
    STRING    = 0;
    TEXT      = 1;
    BOOLEAN   = 2;
    TIMESTAMP = 3;
    INT       = 4;
    UINT      = 5;
    FLOAT     = 6;
}
